[package]
name = "quelthalas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.56.0"
features = ["Win32_Foundation", "Foundation_Numerics", "Win32_UI_WindowsAndMessaging", "Win32_UI", "Win32_UI_HiDpi", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_DirectWrite", "Win32_UI_Controls", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Animation", "Win32_System", "Win32_System_Com", "implement", "Win32_UI_Shell", "Win32_Globalization", "Win32_UI_Input_Ime", "Win32_System_Memory", "Win32_System_DataExchange", "Win32_System_Ole", "Win32_System_SystemServices"]

[dependencies.windows-core]
version = "0.56.0"

[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_Globalization", "Win32_Graphics_Gdi"]

[dependencies.windows-version]
version = "0.1"