[package]
name = "quelthalas"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["M1Knight Technology"]
description = "Fluent UI 2-styled reimplementations of classic Win32 controls, drawn with Direct2D/DirectWrite."
license = "MIT"
repository = "https://github.com/wuweiran/quelthalas"
readme = "README.md"
keywords = ["windows", "win32", "fluent", "ui", "direct2d"]
categories = ["gui", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
# This crate is Windows-only; docs.rs builds on Linux by default, so pin the
# target to an MSVC toolchain or the docs build fails.
targets = ["x86_64-pc-windows-msvc"]
default-target = "x86_64-pc-windows-msvc"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI", "Win32_UI_HiDpi", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_DirectWrite", "Win32_UI_Controls", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Animation", "Win32_System", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_Globalization", "Win32_UI_Input_Ime", "Win32_System_Memory", "Win32_System_DataExchange", "Win32_System_Ole", "Win32_System_SystemServices"]

[dependencies.windows-core]
version = "0.62.2"

[dependencies.windows-numerics]
version = "0.3.1"

[dependencies.windows-version]
version = "0.1.7"