[package]
name = "sample"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.61.3"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI", "Win32_System_LibraryLoader", "Win32_UI_HiDpi", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Animation"]

[dependencies.quelthalas]
path = "../qt"
